--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@
   color: #444343;
   background: rgb(244, 251, 255);
   width: 80%;
-  /* height: 100vh; */
+  height: 100vh;
   margin-left: 20%;
   padding: 20px;
   display: flex;
@@ -139,16 +139,13 @@ p:first-child {
   .Home h2 {
     font-size: 3em;
   }
-  /* .Home p {
-    padding: 1rem;
-  } */
+
   .Header {
     flex-direction: column;
   }
   .class h1 {
     font-size: 2.4em;
-    margin: 1rem;
-    margin-left: 2rem;
+    margin: 6rem auto 0rem 2rem;
   }
   .Nav {
     flex-direction: row;
@@ -159,6 +156,7 @@ p:first-child {
     width: 100%;
     height: 90%;
     margin: 0;
+    padding: 0;
   }
   .Footer {
     display: none;
@@ -200,8 +198,7 @@ p:first-child {
   }
   .class h1 {
     font-size: 1.8em;
-    margin: 1rem;
-    margin-left: 2rem;
+    margin: 5rem auto 0rem 2rem;
   }
   .Home h2 {
     font-size: 2em;
@@ -225,6 +222,7 @@ p:first-child {
     width: 100%;
     justify-content: space-around;
     margin: 0;
+    padding: 0;
   }
   .Footer {
     display: none;
